route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: httpd
  name: httpd
spec:
  host: httpd-note-demo.apps-crc.testing
  port:
    targetPort: 8080
  to:
    kind: Service
    name: httpd
    weight: 100
